# LinGlide

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/linglide-auth/: Cargo.toml
crates/linglide-auth/src/: device.rs  lib.rs  pairing.rs  storage.rs
crates/linglide-capture/: Cargo.toml
crates/linglide-capture/src/: frame.rs  lib.rs  pipewire_capture.rs  virtual_display.rs  x11_capture.rs
crates/linglide-core/: Cargo.toml
crates/linglide-core/src/: config.rs  error.rs  frame.rs  lib.rs  protocol.rs
crates/linglide-desktop/: Cargo.toml
crates/linglide-desktop/src/: app.rs  bridge.rs  components.rs  controller.rs  main.rs  theme.rs  tray.rs
crates/linglide-desktop/src/windows/: about.rs  mod.rs  qr_window.rs
crates/linglide-discovery/: Cargo.toml
crates/linglide-discovery/src/: error.rs  lib.rs  mdns.rs  usb.rs
crates/linglide-encoder/: Cargo.toml
crates/linglide-encoder/src/: encoder.rs  fmp4.rs  lib.rs  pipeline.rs
crates/linglide-input/: Cargo.toml
crates/linglide-input/src/: lib.rs  mouse.rs  stylus.rs  touch.rs  uinput.rs
crates/linglide-server/: Cargo.toml
crates/linglide-server/src/: broadcast.rs  http.rs  lib.rs  tls.rs  websocket.rs
crates/linglide-web/: Cargo.toml
crates/linglide-web/src/: lib.rs
crates/linglide-web/www/: index.html  input.js  manifest.json  style.css  sw.js  viewer.js
crates/linglide-web/www/css/: base.css  controls.css  pairing.css  viewer.css
crates/linglide-web/www/js/: api.js  app.js  state.js  storage.js
crates/linglide-web/www/js/components/: about-panel.js  settings-panel.js  status-bar.js  toast.js
crates/linglide-web/www/js/pairing/: pairing-controller.js  pin-entry.js  qr-scanner.js
crates/linglide-web/www/js/viewer/: input.js  stats.js  viewer.js
scripts/: install.sh  setup-uinput.sh  uninstall.sh
src/: main.rs
