[package]
name = "linglide-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Device pairing and authentication for LinGlide"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
rand = "0.8"
sha2 = "0.10"
base64.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
