[package]
name = "linglide-encoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "H.264 video encoding for LinGlide"

[dependencies]
linglide-core.workspace = true
x264.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
