[package]
name = "linglide-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket server for LinGlide"

[dependencies]
linglide-core.workspace = true
linglide-web.workspace = true
linglide-encoder = { path = "../linglide-encoder" }
linglide-auth = { path = "../linglide-auth" }
linglide-discovery.workspace = true
axum.workspace = true
axum-server.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
mime_guess.workspace = true
rcgen.workspace = true
base64.workspace = true
sha2.workspace = true
dirs.workspace = true
chrono.workspace = true
qrcode.workspace = true
image.workspace = true
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
